# lsst-efd-client

./: .gitignore  .pre-commit-config.yaml  .ts_pre_commit_config.yaml  CHANGELOG.md  Jenkinsfile  Jenkinsfile.conda  pyproject.toml  setup.py  towncrier.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  periodic-ci.yaml
changelog.d/: 20251007_191457_rra_DM_52815.md  20251208_154910_29263449+Vebop_OSW_1481.md  20251215_140955_29263449+Vebop_OSW_1574_creds.md  20260202_150440_29263449+Vebop_OSW_1771_pin_pandas.md  20260206_162447_29263449+Vebop_OSW_1676_release_branch.md  20260217_133826_29263449+Vebop_OSW_1837.md  20260217_172018_29263449+Vebop_OSW_1815.md  20260219_141618_angelofausti_DM_54186.md  20260219_150535_angelofausti_DM_54200.md  20260223_170351_29263449+Vebop_OSW_1871.md  20260302_192812_angelofausti_DM_54303.md  20260303_180651_29263449+Vebop_OSW_1656.md  20260410_133452_29263449+Vebop_OSW_2157.md  20260611_134613_29263449+Vebop_OSW_2428.md
conda/: meta.yaml
doc/news/: DM-50799.feature.rst
docs/: _rst_epilog.rst  conf.py  documenteer.toml  index.rst
docs/user-guide/: authentication.rst  camera-telemetry.rst  getting-started.rst  index.rst  indexed-components.rst  overview.rst  using-influxql.rst  working-with-timestamps.rst
docs/user-guide/notebooks/: ChunkedQueries.ipynb  Downsampling.ipynb  UsingInfluxQL.ipynb
src/: __init__.py
src/aioinflux/: CHANGELOG.md  Makefile  setup.py
src/aioinflux/aioinflux/: client.py  iterutils.py
src/aioinflux/aioinflux/serialization/: dataframe.py
src/aioinflux/docs/: conf.py
src/aioinflux/notebooks/: datapoint_benchmark.ipynb
src/aioinflux/tests/: _test_dataframe.py  _test_serialization.py  _test_usertype.py  conftest.py  test_client.py  test_dataframe.py  test_iter.py  test_serialization.py  test_usertype.py  testing_utils.py
src/lsst_efd_client/: auth_helper.py  efd_helper.py  efd_utils.py
src/lsst_efd_client/aioinflux/: __init__.py  client.py  compat.py  iterutils.py
src/lsst_efd_client/aioinflux/serialization/: __init__.py  common.py  dataframe.py  mapping.py  usertype.py
tests/: efd_test.hdf  test_efd_utils.py  test_lsst_efd_client.py  test_lsst_rsp.py  test_notebook_auth.py
tests/cassettes/: test_get_efd_data.yaml  test_get_efd_data_event.yaml  test_get_most_recent_row_with_data_before.yaml  test_get_topics.yaml  test_lsst_rsp.yaml
tests/data/: efdauth.json
ups/: lsst_efd_client.table
