[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "lsst-efd-client"
description = "Client for the Rubin Observatory Engineering Facilities Database."
license = {file = "LICENSE"}
readme= "README.md"
keywords = [
    "rubin",
    "lsst",
    "efd-client",
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp",
    "numpy",
    "pandas",
    "astropy",
    "pyyaml",
    "tables",
    "kafkit",
    "ciso8601",
    "fastavro",
    "requests",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Testing
    "coverage[toml]",
    "httpx",
    "lsst-rsp>=0.10",
    "pytest",
    "pytest-asyncio",
    "pytest-vcr",
    "pre-commit",
    "mypy",
    "respx",
    # Documentation
    "documenteer[guide]",
    "documenteer[pipelines]",
]

[project.urls]
Homepage = "https://efd-client.lsst.io"
Source = "https://github.com/lsst-ts/lsst-efd-client"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools_scm]
# This allows the build to succeed even if Git is missing
fallback_version = "0.0.0"

[tool.coverage.run]
parallel = true
branch = true
source = ["lsst_efd_client"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
python_files = [
    "tests/*.py",
    "tests/*/*.py"
]

[tool.ruff]
line-length = 110
exclude = ["__init__.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
fixable = ["ALL"] # args: [--fix] in .pre-commit-config.yaml
ignore = [
  "E203", "E226", "E228", "N802", "N803", "N806", "N812", "N813", "N815", "N816"
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["lsst"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md.jinja"
skip_fragments = "_template.md.jinja"
